# R2R

./: .gitignore  pyproject.toml  todo_list.txt
docker/: compose.dev.yaml  compose.yaml  docker-compose.yml
docker/dev/: devr2r.py  pyproject.toml
docker/user_configs/: config.toml
py/: Dockerfile  all_possible_config.toml  pyproject.toml  pyproject.toml.old
py/core/: __init__.py
py/core/providers/ingestion/r2r/: base.py
py/core/utils/: upload_directories_files.py
py/r2r/: r2r.toml
py/tests/unit/: conftest.py
tests/: conftest.py
